// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activated protection request 1`] = `
<React.Fragment>
  <h2>
    My Legal Officers
  </h2>
  <p>
    Your Logion Trust Protection is active. You are now protected by
  </p>
  <ul>
    <li>
      <LegalOfficerInfo
        legalOfficer={
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume",
          }
        }
      />
    </li>
    <li>
      <LegalOfficerInfo
        legalOfficer={
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick",
          }
        }
      />
    </li>
  </ul>
</React.Fragment>
`;

exports[`activated recovery request 1`] = `
<React.Fragment>
  <h2>
    My Legal Officers
  </h2>
  <p>
    Your Logion Trust Protection is active. You are now protected by
  </p>
  <ul>
    <li>
      <LegalOfficerInfo
        legalOfficer={
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume",
          }
        }
      />
    </li>
    <li>
      <LegalOfficerInfo
        legalOfficer={
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick",
          }
        }
      />
    </li>
  </ul>
  <p>
    You may initiate the actual recovery of account 
    toRecover
    .
  </p>
</React.Fragment>
`;

exports[`pending protection request 1`] = `
<React.Fragment>
  <h2>
    My Legal Officers
  </h2>
  <p>
    Your Logion Trust Protection is active. You are now protected by
  </p>
  <ul>
    <li>
      <LegalOfficerInfo
        legalOfficer={
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume",
          }
        }
      />
    </li>
    <li>
      <LegalOfficerInfo
        legalOfficer={
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick",
          }
        }
      />
    </li>
  </ul>
  <React.Fragment>
    <p>
      Mandatory: we detect that the Logion Application needs to be re-synchronized with the Logion Blockchain. To proceed, please click on the button and sign to confirm this operation:
    </p>
    <Button
      active={false}
      disabled={false}
      id="btnConfirmProtection"
      onClick={[Function]}
      variant="primary"
    >
      Re-Sync Confirmation
    </Button>
  </React.Fragment>
</React.Fragment>
`;

exports[`pending recovery request 1`] = `
<React.Fragment>
  <h2>
    My Legal Officers
  </h2>
  <p>
    Your Logion Trust Protection is active. You are now protected by
  </p>
  <ul>
    <li>
      <LegalOfficerInfo
        legalOfficer={
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume",
          }
        }
      />
    </li>
    <li>
      <LegalOfficerInfo
        legalOfficer={
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick",
          }
        }
      />
    </li>
  </ul>
  <p>
    You may initiate the actual recovery of account 
    toRecover
    .
  </p>
  <React.Fragment>
    <p>
      Mandatory: we detect that the Logion Application needs to be re-synchronized with the Logion Blockchain. To proceed, please click on the button and sign to confirm this operation:
    </p>
    <Button
      active={false}
      disabled={false}
      id="btnConfirmProtection"
      onClick={[Function]}
      variant="primary"
    >
      Re-Sync Confirmation
    </Button>
  </React.Fragment>
</React.Fragment>
`;
